--- a/packages/workspace1/packages/package2/package.json
+++ b/packages/workspace1/packages/package2/package.json
@@ -5,7 +5,8 @@
   "main": "build/src/index.js",
   "scripts": {
     "build": "tsc -b --verbose",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "workspace-call": "node ./build/src/index.js"
   },
   "keywords": [],
   "author": "",
